--- a/src/EntryPoint/index.css
+++ b/src/EntryPoint/index.css
@@ -5,5 +5,5 @@
 @import "tailwindcss/utilities";
 
 .customButton {
-  @apply bg-gray-800 p-1 rounded text-blue-400;
+  @apply bg-green-800 focus:bg-red-500 p-1 rounded text-blue-400;
 }
