--- a/src/EntryPoint/index.css
+++ b/src/EntryPoint/index.css
@@ -1,9 +1,72 @@
+/*
+ * This file contains global styling.
+ * A lot of dark/light mode config is written here.
+ */
+
+@font-face {
+  font-family: 'Daddy Rewind';
+  src: local("Daddy Rewind"), url("../../src/Fonts/DaddyRewind-MVYAP.ttf") format("truetype");
+}
+
 @import "tailwindcss/base";
-
 @import "tailwindcss/components";
-
 @import "tailwindcss/utilities";
 
-.customButton {
-  @apply bg-green-800 focus:bg-red-500 p-1 rounded text-blue-400;
+@layer base {
+
+  p, div, span {
+    @apply dark:text-white text-base;
+  }
+  h1 {
+    @apply dark:text-white text-3xl;
+  }
+  h2 {
+    @apply dark:text-white text-2xl;
+  }
+  h3 {
+    @apply dark:text-white text-xl;
+  }
+  button {
+    @apply bg-indigo-600 hover:bg-indigo-300 dark:bg-indigo-900 dark:hover:bg-indigo-600 transition duration-300 ease-in-out py-2 px-4 text-lg rounded shadow-lg text-white;
+  }
+  a {
+    @apply bg-white justify-items-center my-5 cursor-pointer hover:bg-indigo-300 dark:bg-indigo-1000 dark:hover:bg-indigo-600 transition duration-300 ease-in-out py-2 px-4 text-lg rounded text-black dark:text-white;
+  }
+}
+
+@layer components {
+  .dark {
+    @apply bg-indigo-1000;
+  }
+
+  .navbar {
+    @apply bg-indigo-navbarLight dark:bg-indigo-navbar sticky top-0 w-full shadow;
+  }
+
+  .icon-button {
+    background: rgba(0,0,0, .08);
+    padding: 15px;
+    box-shadow: none;
+    margin: 0 0 0 15px;
+  }
+
+  .custom-container {
+    @apply container mx-auto md:px-80 sm:px-10 px-4 my-5;
+  }
+
+  .icon {
+    @apply text-white dark:bg-black;
+  }
+
+  .nav-container {
+    @apply flex justify-items-center justify-end;
+  }
+  
+  .nav-item {
+    @apply bg-transparent dark:bg-transparent;
+  }
+
+  .info-box {
+    @apply w-screen;
+  }
 }
