Testing gh pages

--- a/src/App/index.css
+++ b/src/App/index.css
@@ -4,11 +4,12 @@
 }
 
 .project-item {
-    @apply px-5 py-4 mb-0 border-gray-400 hover:border-indigo-600 shadow-md rounded w-3/4 transition-all duration-300 ease-in-out;
+    @apply px-5 py-4 mb-0 border-gray-400 hover:border-indigo-600 shadow-md rounded w-full md:w-3/4 transition-all duration-300 ease-in-out;
     border-width: 1px;
 }
 
 .project-item:hover {
-    @apply rounded-xl;
+    @apply rounded-2xl;
     transform: scale(1.05);
+    z-index: 0;
 }
