--- a/src/EntryPoint/index.css
+++ b/src/EntryPoint/index.css
@@ -45,6 +45,10 @@
   a {
     @apply bg-white justify-items-center my-5 cursor-pointer hover:bg-indigo-300 dark:bg-indigo-1000 dark:hover:bg-indigo-600 transition duration-300 ease-in-out py-2 px-4 text-lg rounded text-black dark:text-white;
   }
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @layer components {
