--- a/src/EntryPoint/index.css
+++ b/src/EntryPoint/index.css
@@ -13,13 +13,17 @@
 
 @font-face {
   font-family: 'Daddy Rewind';
-  src: local("Daddy Rewind"), url("../Fonts/DaddyRewind-MVYAP.ttf") format("truetype");
+  src: 
+    local("Arial"),
+    url("../Fonts/DaddyRewind-MVYAP.ttf") format("truetype");
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Nunito Bold';
-  src: local("Nunito"), url("../Fonts/Nunito-Bold.ttf") format("truetype");
+  src:
+    local("Arial"),
+    url("../Fonts/Nunito-Bold.ttf") format("truetype");
   font-display: swap;
 }
 
